turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:54: error: ';' expected but ',' found.
  	{{{1, LEFT  , 0}, {0, NOTURN, 1}}, {{0, LEFT  , 0}, {0, LEFT  , 1}}}
            ^Turmite:54: error: ';' expected but ',' found.
  	{{{1, LEFT  , 0}, {0, NOTURN, 1}}, {{0, LEFT  , 0}, {0, LEFT  , 1}}}
                        ^Turmite:54: error: ';' expected but ',' found.
  	{{{1, LEFT  , 0}, {0, NOTURN, 1}}, {{0, LEFT  , 0}, {0, LEFT  , 1}}}
                                         ^